# rust-webgl-template

./: Cargo.toml  README.md
shaders/: quad.vert
src/: lib.rs
www/: index.html  index.js  package.json
