[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
js-sys = "0.3.37"
wasm-bindgen = "0.2.60"
console_error_panic_hook = "*"

[dependencies.web-sys]
version = "0.3.56"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'CanvasRenderingContext2d',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]

[profile.release]
lto = true
opt-level = 's'

